--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -17,7 +17,6 @@ global:
     - eu-central-1
     - eu-west-1
     - eu-west-2
-    - eu-west-3
     - sa-east-1
   reporting: true
 tests:
@@ -28,7 +27,7 @@ tests:
 #    - sa-east-1
   quickstart-fortigate-test:
     parameter_input: input.json
-    template_file: workload-master.template
+    template_file: workload-master.yaml
     regions:
     - us-east-1
     - us-east-2
@@ -42,9 +41,8 @@ tests:
     - eu-central-1
     - eu-west-1
     - eu-west-2
-    - eu-west-3
   quickstart-fortigate-test-ap-southeast-2:
     parameter_input: input-ap-southeast-2.json
-    template_file: workload-master.template
+    template_file: workload-master.yaml
     regions:
     - ap-southeast-2
