--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -17,17 +17,18 @@ global:
     - eu-central-1
     - eu-west-1
     - eu-west-2
+    - eu-west-3
     - sa-east-1
   reporting: true
 tests:
-#  quickstart-fortigate-test-sa-east-1:
-#    parameter_input: input-sa-east-1.json
-#    template_file: workload-master.template
-#    regions:
-#    - sa-east-1
+  quickstart-fortigate-test-sa-east-1:
+    parameter_input: input-sa-east-1.json
+    template_file: workload-master.template
+    regions:
+    - sa-east-1
   quickstart-fortigate-test:
     parameter_input: input.json
-    template_file: workload-master.template.yaml
+    template_file: workload-master.template
     regions:
     - us-east-1
     - us-east-2
@@ -41,8 +42,9 @@ tests:
     - eu-central-1
     - eu-west-1
     - eu-west-2
+    - eu-west-3
   quickstart-fortigate-test-ap-southeast-2:
-    parameter_input: input-ap-southeast-2.template.json
-    template_file: workload-master.yaml
+    parameter_input: input-ap-southeast-2.json
+    template_file: workload-master.template
     regions:
     - ap-southeast-2
