--- a/templates/create-fortianalyzer.template
+++ b/templates/create-fortianalyzer.template
@@ -90,6 +90,19 @@
         "ProductAMI": {
             "Type": "String",
             "Description": "The AMI for the product created with EC2 Instance in this stack."
+        },
+        "CustomPrivateIpAddress": {
+            "Type": "String",
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}$",
+            "ConstraintDescription": "must be a valid IPv4 format.",
+            "Description": "The static private IP address allocated for the FortiAnalyzer in the designated subnet."
+        },
+        "UseElasticIp": {
+            "Type": "String",
+            "Default": "yes",
+            "AllowedValues": ["yes", "no"],
+            "ConstraintDescription": "must be a valid option from the list.",
+            "Description": "Use an Elastic IP as the public IP of each created FortiAnalyzer."
         }
     },
     "Mappings": {},
@@ -112,6 +125,22 @@
                         ""
                     ]
                 }
+            ]
+        },
+        "IfNoCustomPrivateIpAddress": {
+            "Fn::Equals": [
+                {
+                    "Ref": "CustomPrivateIpAddress"
+                },
+                ""
+            ]
+        },
+        "IfUseEip": {
+            "Fn::Equals": [
+                {
+                    "Ref": "UseElasticIp"
+                },
+                "yes"
             ]
         }
     },
@@ -250,7 +279,20 @@
                 "NetworkInterfaces": [
                     {
                         "DeviceIndex": 0,
-                        "AssociatePublicIpAddress": true,
+                        "AssociatePublicIpAddress": {
+                            "Fn::If": ["IfUseEip", false, true]
+                        },
+                        "PrivateIpAddress": {
+                            "Fn::If": [
+                                "IfNoCustomPrivateIpAddress",
+                                {
+                                    "Ref": "AWS::NoValue"
+                                },
+                                {
+                                    "Ref": "CustomPrivateIpAddress"
+                                }
+                            ]
+                        },
                         "SubnetId": {
                             "Ref": "SubnetId"
                         },
@@ -318,6 +360,16 @@
                             ]
                         ]
                     }
+                }
+            }
+        },
+        "FazEIP": {
+            "Condition": "IfUseEip",
+            "Type": "AWS::EC2::EIP",
+            "Properties": {
+                "Domain": "vpc",
+                "InstanceId": {
+                    "Ref": "ec2InstanceFortiAnalyzer"
                 }
             }
         },
@@ -465,7 +517,15 @@
                             "Ref": "AutoscaleAdminPassword"
                         },
                         "FORTIANALYZER_IP": {
-                            "Fn::GetAtt": ["ec2InstanceFortiAnalyzer", "PublicIp"]
+                            "Fn::If": [
+                                "IfUseEip",
+                                {
+                                    "Ref": "FazEIP"
+                                },
+                                {
+                                    "Fn::GetAtt": ["ec2InstanceFortiAnalyzer", "PublicIp"]
+                                }
+                            ]
                         },
                         "FORTIANALYZER_PORT": "443",
                         "USE_AUTOSCALE_ADMIN_ACCOUNT": "true"
@@ -679,7 +739,7 @@
         "PrivateIp": {
             "Description": "The private ip of the created FortiAnalyzer.",
             "Value": {
-                "Fn::GetAtt": ["FazHandlerService", "PrivateIp"]
+                "Fn::GetAtt": ["ec2InstanceFortiAnalyzer", "PrivateIp"]
             }
         },
         "VIP": {
