--- a/templates/autoscale-new-vpc.template
+++ b/templates/autoscale-new-vpc.template
@@ -328,7 +328,7 @@
             "Default": "",
             "AllowedPattern": "^$|^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}$",
             "ConstraintDescription": "must be a valid IPv4 format.",
-            "Description": "The custom private IP address to be used by the FortiAnalyzer. The FortiAnalyzer custom private IP must be within the Autoscale subnet 1 CIDR range."
+            "Description": "The custom private IP address to be used by the FortiAnalyzer. Must be within the Autoscale subnet 1 CIDR range."
         },
         "IntegratedNatGatewayOptions": {
             "Type": "String",
